--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ set(LIBARTNET_SRCS
 )
 
 set(LIBARTNET_HDRS
+  "${CMAKE_CURRENT_SOURCE_DIR}/config.h"
   "${SRC_DIR}/artnet.h"
   "${SRC_DIR}/common.h"
   "${SRC_DIR}/misc.h"
@@ -36,64 +37,10 @@ target_include_directories(
 )
 
 target_compile_definitions(
-  libartnet PUBLIC
-  HAVE_INET_ATON=1
-  HAVE_INET_NTOA=1
-  HAVE_MALLOC=1
-  HAVE_MEMSET=1
-  HAVE_REALLOC=1
-  HAVE_SELECT=1
-  HAVE_STDBOOL_H=1
-  HAVE_STDDEF_H=1
-  HAVE_STDINT_H=1
-  HAVE_STDLIB_H=1
-  HAVE_STRCHR=1
-  HAVE_STRDUP=1
-  HAVE_STRERROR=1
-  HAVE_STRING_H=1
-  HAVE_VPRINTF=1
-  IPV6=1
-  PACKAGE="libartnet"
-  SELECT_TYPE_ARG1=int
-  SELECT_TYPE_ARG234=(fd_set*)
-  SELECT_TYPE_ARG5=(struct timeval*)
-  STDC_HEADERS=1
+  libartnet
+  PUBLIC
+  HAVE_CONFIG_H=1   # enable the config.h file
 )
-# UNIX
-if (UNIX)
-  target_compile_definitions(
-    libartnet PUBLIC
-    HAVE_ARPA_INET_H=1
-    HAVE_DLFCN_H=1
-    HAVE_GETIFADDRS=1
-    HAVE_SYS_IOCTL_H=1
-    HAVE_SYS_SELECT_H=1
-    HAVE_SYS_SOCKET_H=1
-    HAVE_SYS_STAT_H=1
-    HAVE_SYS_TYPES_H=1
-    HAVE_UNISTD_H=1
-    
-    SELECT_TYPE_ARG1=int
-    SELECT_TYPE_ARG234=(fd_set*)
-    SELECT_TYPE_ARG5=(struct timeval*)
-    
-    
-  )
-  
-  if (NOT APPLE)
-    target_compile_definitions(
-      libartnet PUBLIC
-      HAVE_LINUX_IF_PACKET_H=1 
-      HAVE_ENDIAN_H=1
-    )
-  endif()
-elseif (WIN32)
-  target_compile_definitions(
-    libartnet PUBLIC   
-  )
-)
-
-
 
 if(WIN32)
   target_link_libraries(
